# gas-alert

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily.yml
gas_alert/: config.py  main.py  notify.py
gas_alert/sources/: __init__.py  gasbuddy.py  google_places.py
tests/: test_formatting.py
