[project]
name = "gas-alert"
version = "0.1.0"
description = "Daily cheapest-gas alert: email + free SMS for your configured cities"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gas_alert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
